IF (WIN32)
  CMAKE_MINIMUM_REQUIRED(VERSION 3.11)
ELSE()
  CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
ENDIF()

PROJECT (openexr_viewers)

MACRO(SET_ILMBASE_INCLUDE_DIRS _target)
  TARGET_INCLUDE_DIRECTORIES(${_target}
    PRIVATE ${ZLIB_INCLUDE_DIR}
    PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/../../OpenEXR/config
    PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/../../IlmBase/config
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../OpenEXR/IlmImf
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../OpenEXR/IlmImfUtil
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../IlmBase/Half
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../IlmBase/Iex
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../IlmBase/IexMath
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../IlmBase/IlmThread
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../IlmBase/Imath
  )
ENDMACRO()

#FIND_PACKAGE (OpenGL REQUIRED)
#FIND_PACKAGE (FLTK)
#FIND_PACKAGE (GLUT)
#FIND_PACKAGE (Cg)

INCLUDE_DIRECTORIES ( ${CMAKE_INSTALL_INCLUDEDIR}/OpenEXR )
LINK_DIRECTORIES ( ${CMAKE_INSTALL_LIBDIR} )
MESSAGE ( "OpenEXR Include Directory = " ${CMAKE_INSTALL_FULL_INCLUDEDIR}/OpenEXR)
MESSAGE ( "OpenEXR Library Directory = " ${CMAKE_INSTALL_FULL_LIBDIR})

IF (NOT WIN32)
  SET ( PTHREAD_LIB pthread )
ENDIF()

##########################
IF (FLTK_FOUND)
  ADD_SUBDIRECTORY ( exrdisplay )
ENDIF ()

IF (CG_FOUND AND GLUT_FOUND)
  ADD_SUBDIRECTORY ( playexr )
  INCLUDE_DIRECTORIES ( playexr )
ENDIF ()

##########################
# Installation
##########################

# Documentation
INSTALL ( FILES
  doc/OpenEXRViewers.pdf
  DESTINATION
  ${CMAKE_INSTALL_DOCDIR}
  )
